--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="text/javascript" src="parameters.js"></script>
 <script type="text/javascript" src="marago.js"></script>
 <script type="text/javascript" src="draggable.js"></script>
+<script type="text/javascript" src="misc.js"></script>
 </head>
 <body onload="newGame()">
 
