Fixed problem with star scores when 1 star not possible

--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@
 
 </div> <!-- End of the overall board div -->
 
+<!-- This is the panel used for alerts -->
+<div id="alertPanel">
+</div>
+
 <div id="footer">
   <a href="http://www.totalmarago.com" target="_blank">TotalMarago</a>&trade; by Zoxor - Online version by P. Gaudiano
 <a href="Help/GameElements.html" target="_Blank">
